# cmake-20230404-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json
